--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<link rel="stylesheet" href="styles.css">
 	<ul class= "navbar"> 	
 		<li> <a href="index.html" >Home</a> </li>
-		<li> <a href="about.html">Projects</a></li>
+		<li> <a href="about.html">Blog</a></li>
 		<li> <a href="contact.html">contact </a></li>
 	</ul> 
 	<h1>Melika Nassizadeh</h1>
