--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<li> <a href="about.html">Blog</a></li>
 		<li> <a href="contact.html">contact </a></li>
 	</ul> 
-	<h1>Melika Nassizadeh</h1>
+	<h1 class="mainPageHeadline" >Melika Nassizadeh</h1>
 	<hr>
 </head>
 <body>
